--- a/ansible_ejbca_signsrv/roles/ansible-ejbca-pkc11-client/tasks/install_softhsm.yml
+++ b/ansible_ejbca_signsrv/roles/ansible-ejbca-pkc11-client/tasks/install_softhsm.yml
@@ -19,7 +19,7 @@
       dnf:
         name: "{{ softhsm_8 }}"
         state: present
-        #disable_gpg_check: yes
+        disable_gpg_check: yes
 
   when: 
     - (ansible_facts['distribution'] == "CentOS" and ansible_facts['distribution_major_version'] == "8") or
